--- a/单词多样性.md
+++ b/单词多样性.md
@@ -24,11 +24,109 @@
 
 #### be keen on 
 
-#### have a passion of
+#### have a passion for
 
 
 
+## 事实上
+
+#### in effect / in fact / in reality
+
+> **In effect** she is punishing her parents for making her feel threatened and insecur
+>
+> That deal would create, **in effect**, the world's biggest airline
+
+#### indeed / virtually
+
+> It is very, very strong evidence **indeed**
+>
+> The sound is **virtually** undetectable to the human ear.
 
 
 
+## 表示原因
+
+#### because / in that / as / since
+
+because of / due to / owing to / thanks to 
+
+
+
+## 表示结果
+
+#### so / hence / therefore / thereby / thus / consequently 
+
+> Relations between the two companies had, **consequently** , never been *close*
+
+#### in consequence / as a result  / as a consequence
+
+> **In consequence** he lost his place
+
+> **In consequence**, there were good seeds from good plants, and bad seeds from bad plants
+
+
+
+## 表示对比
+
+### 相似性对比
+
+#### likewise = similarly = equally = **simultaneously** = at the same time = in the meanwhile
+
+> The game will be broadcast  **simultaneously** on TV and *radio*
+>
+> The two guns fired almost **simultaneously**.
+
+> She looked so beautiful, and **at the same time** so remote.
+
+### 差异性对比
+
+#### but
+
+#### by contrast = conversely = alteratively 
+
+#### on the contrary = on the other hand = otherwise = while = whereas
+
+> **While** Tom's very good at science, his brother is absolutely hopeless
+
+> It's no trouble at all, **on the contrary**, it will be a great pleasure to help you
+
+
+
+## 表示递进
+
+besides = also = inaddition =  moreover =  furthermore =  apart / aside from this
+
+> **Inaddition**, air flows from the wet end pulper may cause problems in this area.
+
+> **Aside from this**, there isn't much to say for that pictur
+
+
+
+## 表示让步
+
+despite = in spite of = notwithstanding = although = though = as = while  = even if = much as
+
+> **In spite of** what happened, he never lost the will to live
+>
+> **Much as** I would like to stay, I really must go home. 
+
+granting /  granted that
+
+> **Granted that** the firm has not broken the law, is the law what it should be?
+
+
+
+## 表示条件
+
+#### if
+
+#### providing / provided
+
+> **Providing** they do not panic, I believe that their chances of survival will be beyond 95 per *cent.*
+>
+> I will come **provided** I have the *time.*
+
+#### suppose / supposing that(假设)
+
+> **Supposing that** white were black, you would be right.
 
