--- a/单词多样性.md
+++ b/单词多样性.md
@@ -8,6 +8,10 @@
 
 #### assume presume claim assert contend
 
+> sb. **assume that** xxx
+>
+> sb. **claim that** xxxx
+
 
 
 ## 人们
@@ -132,5 +136,67 @@ granting /  granted that
 
 
 
-## zz
+## 表示目的
+
+to = in order to = so as to
+
+
+
+## 引出新对象
+
+about = concerning =  regarding = with regard to = as for = in respect of  关于
+
+in terms of 就....而言
+
+when it comes to  当提到...时
+
+
+
+## 表示强调
+
+above all = most important
+
+in effect / in fact / in reality
+
+indeed / virtually
+
+
+
+## 表示总结
+
+### 总的来说
+
+on the whole = all in all = overall 
+
+in conclusion = in summary = in general 
+
+generally  = as a whole  =  mainly = substantially =  to sum up = conclude = come to the conclusion 
+
+### 简而言之
+
+in short = in brief = in a word
+
+### 无论如何
+
+in any case = at any rate = anyway
+
+
+
+## 表示举例
+
+like = such as = for instance = for example = 
+
+a good case in point is... 
+
+to illustrate = as an illustration
+
+> **to illustrate** my point, let me tell you a little *story*
+
+> We may use final examinations in school **as an illustration**
+
+
+
+
+
+
 
