--- a/模版句子.md
+++ b/模版句子.md
@@ -1,3 +1,25 @@
+## 公认的事实
+
+#### undoubtedly 
+
+#### there is no doubt that
+
+#### threr is no denying that 
+
+#### **It is commonly asserted that**
+
+#### It is common knowlege that ...
+
+#### It is self-evident that ...
+
+#### **It is beyond dispute that ...**
+
+#### **It is universally acknowledged that ....**
+
+#### It has been widely accepted that
 
 
-**It is commonly asserted that** 人们普遍认为
+
+## 我认为
+
+#### From my perspective
