--- a/论说文模版.md
+++ b/论说文模版.md
@@ -62,5 +62,12 @@ Quite a few factors , as a matter of fact , could account for my standpoints. As
 
 From what has been mentioned above , we can safely draw the conclusion that [主题].So It is high time for sb. to do sth.Only in this way can we have a harmonious society.
 
+## 再来一套
+From my perspective, the significance of _______ cannot be neglected in contemporary society, and in the workforce, the power to ______ is an effective weapon.
+One of my close friends , Larry , is a suitable case in point,________.
+Aside from this , ____________ .
+Furthermore,_______ .
+
+
 
 
