--- a/论说文模版.md
+++ b/论说文模版.md
@@ -56,7 +56,7 @@ Only in such ways of xxx can
 
 ## 完整文章
 
-Recently , it is deyond dispute that the phenomenon of [主题] has almost been in the limelight with the development of science and technology.From my perspective , high value should be attached to [主题].
+with the development of science and technology, it is beyond dispute that the phenomenon of [主题] has almost been in the limelight .From my perspective , high value should be attached to [主题].
 
 Quite a few factors , as a matter of fact , could account for my standpoints. As the primary element,  _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _.One of my close friends , Larry , is a suitable case in point .Aside from this ,  _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _.Furthermore, _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _.
 
